--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<p id="counter">0</p>
-	<input type="button" value="Increament" class="incrementBtn">
+	<input type="button" value="Increament" id="incrementBtn">
     <script type="text/javascript" src="./script.js">
 </script>
 
